--- a/src/components/InstagramReels.css
+++ b/src/components/InstagramReels.css
@@ -1,5 +1,5 @@
 .instagram-section {
-  color: var(--color-white);
+  color: #000000;
 }
 
 .insta-icon-wrap {
